[package]
name = "video_editor_for_devs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "*", features = [
  "default",
  "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
egui_extras = { version = "*", features = ["default", "image"] }
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
] }
byte-unit = "5.1.4"
rusqlite = { version = "0.32.0", features = ["bundled"] }
